@@ -28,11 +28,12 @@ BSON_BEGIN_DECLS
 
 typedef struct
 {
+   uint8_t twod_sphere_version;
    uint8_t twod_bits_precision;
    double  twod_location_min;
    double  twod_location_max;
    double  haystack_bucket_size;
-   uint8_t *padding[16];
+   uint8_t *padding[32];
 } mongoc_index_opt_geo_t;
 
 typedef struct
